--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanuja Reddy Guntaka - Portfolio</title>
-    <!-- FIXED: Correct font name -->
+    <!-- FIX CSS PATH - TRY THIS -->
+    <link rel="stylesheet" href="https://thanujareddy14.github.io/my-portfolio/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
